# chumpy-uv-test

./: pyproject.toml
.github/workflows/: main.yml  only-managed.yml  venv-cp312.yml  venv.yml  without-lock.yml
